--- a/SharedContent/SharedContent.csproj
+++ b/SharedContent/SharedContent.csproj
@@ -97,7 +97,7 @@
     <Compile Include="GameObject.cs" />
     <Compile Include="CollectibleEnum.cs" />
     <Compile Include="EnemyEnum.cs" />
-    <Compile Include="SpriteInfo.cs" />
+    <Compile Include="ObjectInfo.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="MapEnum.cs" />
     <Compile Include="MapObject.cs" />
