--- a/SharedContent/SharedContent.csproj
+++ b/SharedContent/SharedContent.csproj
@@ -100,6 +100,7 @@
     <Compile Include="EnemyEnum.cs" />
     <Compile Include="ICollisionable.cs" />
     <Compile Include="LevelMenu.cs" />
+    <Compile Include="StartMenu.cs" />
     <Compile Include="ObjectInfo.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="MapEnum.cs" />
